# Geoshield-mllm

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  requirements.txt
configs/attacks/: aux_victim_mismatch.yaml  eps_sweep.yaml  geoshield_attack_vllm_adaptive.yaml  geoshield_baseline.yaml
configs/datasets/: gsv_100_pilot.yaml  gsv_500_stratified.yaml  im2gps3k_100_pilot.yaml  im2gps3k_15_smoke.yaml  im2gps3k_500_stratified.yaml
configs/evals/: main_budget_sweep.yaml  main_failure_tags.yaml  pilot_cross_provider.yaml  pilot_openai.yaml
configs/prompts/: describe_non_geo_v1.md  geolocation_infer_v1.md  schemas.json
configs/storage/: google_drive.yaml
docs/: adaptive_geoshield_plan.md  architecture.md  dataset_availability.md  drive_smoke_latest.json  experiment_protocol.md  reports.md  setup.md  storage.md
docs/memory/: decisions.md  progress_log.md  project_state.md
docs/research/: paper_notes.md  revised_research_plan.md
docs/results/: index.md  latest.md
manifests/: README.md  gsv_100_pilot.csv  im2gps3k_100_pilot.csv  im2gps3k_15_smoke.csv
manifests/schemas/: manifest_schema.md
patches/external_geoshield_adaptive/: README.md  config_schema.py  (+1 more)
scripts/: apply_geoshield_adaptive_overlay.py  bootstrap_repo.py  download_exact_gsv.py  generate_sam_refined_boxes.py
tests/: test_drive_smoke.py  test_eval_runner.py  test_external_geoshield_runner.py  test_haversine.py  test_manifest.py  test_normalize.py  test_prepare_dataset.py  test_retry.py  test_smoke_runner.py  test_storage_paths.py  test_techutopia_provider.py
(+50 files in other folders)
